--- a/index.css
+++ b/index.css
@@ -65,6 +65,18 @@ h3 {
 
 }
 
+h4 {
+    margin-top: 10px;
+    text-align: center;
+}
+
+.ff14-trailer {
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+
+}
+
 
 
 
