--- a/index.css
+++ b/index.css
@@ -107,7 +107,11 @@ h4 {
     box-shadow: 10px 10px 5px black;
 }
 
-
+.gw2-trailer {
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+}
 
 
 
