--- a/index.css
+++ b/index.css
@@ -53,17 +53,26 @@ h3 {
 }
 
 #offsidaff14{ /*link box */
+    min-width: auto;
+    max-width: fit-content;
     display: flex;
-    position: absolute;
-    right: 10%;
-    bottom: 20%;
-    min-width: fit-content;
+    justify-content: space-evenly;
+    text-align: center;
+    flex: 50%;
     height: auto;
-    padding: 20px;
+    padding: 30px;
+    margin: 20px;
     background-color: rgb(173, 187, 212);
     box-shadow: 10px 10px 5px black;
 
 }
+
+.ff14-linkandtable {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
 
 h4 { /* text top på trailers */
     margin-top: 10px;
@@ -78,15 +87,22 @@ h4 { /* text top på trailers */
 }
 
 #offwow { /*link box */
+    min-width: auto;
+    max-width: fit-content;
     display: flex;
-    position: absolute;
-    right: 10%;
-    bottom: -60%;
-    min-width: fit-content;
+    justify-content: space-evenly;
+    text-align: center;
+    flex: 50%;
     height: auto;
-    padding: 20px;
+    padding: 30px;
+    margin: 20px;
     background-color: rgb(218, 188, 20);
     box-shadow: 10px 10px 5px black;
+}
+.wow-linkandtable {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
 }
 
 .wow-trailer {
@@ -96,15 +112,23 @@ h4 { /* text top på trailers */
 }
 
 #offGW2 { /*link box */
+    min-width: auto;
+    max-width: fit-content;
     display: flex;
-    position: absolute;
-    right: 10%;
-    bottom: -140%;
-    min-width: fit-content;
+    justify-content: space-evenly;
+    text-align: center;
+    flex: 50%;
     height: auto;
-    padding: 20px;
+    padding: 30px;
+    margin: 20px;
     background-color: rgb(255, 156, 156);
     box-shadow: 10px 10px 5px black;
+}
+
+.gw2-linkandtable {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
 }
 
 .gw2-trailer {
@@ -119,6 +143,7 @@ table, th, td {
     border-collapse: collapse;
     padding: 10px;
     text-align: center;
+    flex: 50%;
 }
 
 th {
@@ -129,3 +154,11 @@ th {
     text-align: left;
 }
 /* table styling end*/
+
+@media screen and(max-width:1099px){
+    #offsidaff14, #offwow, #offGW2 {
+        flex-direction: column;
+
+    }
+
+}
