--- a/index.css
+++ b/index.css
@@ -53,7 +53,7 @@ h3 {
     font-style: oblique;
 }
 
-#offsidaff14{ /*link box */
+#offsidaff14, #offwow, #offGW2 {
     min-width: auto;
     max-width: fit-content;
     display: flex;
@@ -63,9 +63,11 @@ h3 {
     height: auto;
     padding: 30px;
     margin: 20px;
+}
+
+#offsidaff14{ /*link box */
     background-color: rgb(173, 187, 212);
     box-shadow: 10px 10px 5px black;
-
 }
 
 .ff14-linkandtable, .wow-linkandtable, .gw2-linkandtable {
@@ -73,7 +75,6 @@ h3 {
     flex-wrap: wrap;
     align-items: center;
 }
-
 
 h4 { /* text top på trailers */
     margin-top: 10px;
@@ -88,29 +89,11 @@ h4 { /* text top på trailers */
 }
 
 #offwow { /*link box */
-    min-width: auto;
-    max-width: fit-content;
-    display: flex;
-    justify-content: space-evenly;
-    text-align: center;
-    flex: 50%;
-    height: auto;
-    padding: 30px;
-    margin: 20px;
     background-color: rgb(218, 188, 20);
     box-shadow: 10px 10px 5px black;
 }
 
 #offGW2 { /*link box */
-    min-width: auto;
-    max-width: fit-content;
-    display: flex;
-    justify-content: space-evenly;
-    text-align: center;
-    flex: 50%;
-    height: auto;
-    padding: 30px;
-    margin: 20px;
     background-color: rgb(255, 156, 156);
     box-shadow: 10px 10px 5px black;
 }
